[package]
name = "isleep"
version = "0.1.0"
edition = "2021"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]
license = "MIT"
description = "Intermittent sleeping and return the control flow inbetween"
homepage = "https://github.com/raui100/iSleep"
repository = "https://github.com/raui100/iSleep"
keywords = ["intermittent", "sleep", "accurate", ]

[dependencies]
spin_sleep = { version = "1.1.1", optional = true }

[features]
accuracy = ["dep:spin_sleep"]