[package]
name = "isleep"
version = "0.3.2"
edition = "2021"
authors = ["Raui Ghazaleh <rj.ghazaleh@gmail.com>"]
license = "Apache-2.0"
description = "Intermittent sleeping and return the control flow inbetween"
homepage = "https://github.com/raui100/iSleep"
repository = "https://github.com/raui100/iSleep"
keywords = ["intermittent", "sleep", "accuracy"]

[dependencies]
spin_sleep = { version = "1", optional = true }

[features]
accuracy = ["dep:spin_sleep"]